SW-8675 Fixed: Alignment of the select box replacement for the birthday selection in the registration

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/register.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/register.less
@@ -113,7 +113,8 @@
             float: left;
         }
 
-        .register--birthyear {
+        .register--birthyear,
+        .register--birthyear .js--fancy-select {
             .unitize(0, 16, margin-right);
         }
 
